--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -1,9 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Overview ##\n",
+    "\n",
+    "PubChem is a site run by the NIH which hosts raw data associated with chemical experiments; here we analyze the data hosted at PubChem for assay 1030, which looks for inhibitors of the protein encoding gene ALDH1A1. You can access the page for this assay [here](https://pubchem.ncbi.nlm.nih.gov/bioassay/1030)\n",
+    "\n",
+    "## Results ##\n",
+    "\n",
+    "We use the SMILES string, a common representation for a molecule amongst chemists, to begin the featurization process. Because the length of this string varies, it is normalized in the form of a Morgan Fingerprint; these are then used to train a RandomForestClassifier using sklearn. The performance on a held-out test set was 92% \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -12,7 +27,6 @@
     "from rdkit import Chem, DataStructs\n",
     "from rdkit.Chem import AllChem, rdMolDescriptors\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "import numpy\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n"
@@ -20,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,12 +64,12 @@
       "Processed index: 200000\n",
       "Processed index: 210000\n",
       "Processed index: 220000\n",
-      "Processed all, pickling"
+      "Processed all, pickling\n"
      ]
     }
    ],
    "source": [
-    "# Load assay info. Note: This CSV was obtained from PubChem bioassay, via searching for AID 1030 \n",
+    "# Load assay info. Note: This CSV was obtained from PubChem bioassay aka PCBA, via searching for AID 1030 \n",
     "# and downloading the datatable\n",
     "\n",
     "ba_df = pd.read_csv(\"AID_1030_datatable_all.csv\")\n",
@@ -105,9 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully featurized 220364 compounds.\n",
+      "6603008\n",
+      "[ 0.  0.  0. ...,  0.  0.  0.]\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Duplicate imports in case starting from this cell\n",
     "\n",
@@ -117,23 +142,22 @@
     "from rdkit import Chem, DataStructs\n",
     "from rdkit.Chem import AllChem, rdMolDescriptors\n",
     "\n",
-    "# Pickle the data to speed up future analysis\n",
-    "compounds = None\n",
+    "compound_ids = None\n",
     "fingerprints = None\n",
     "activities = None\n",
     "\n",
     "with open('data.pickle', 'rb') as f:\n",
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
-    "    (compounds, fingerprints, activities) = pickle.load(f)\n",
+    "    (compound_ids, fingerprints, activities) = pickle.load(f)\n",
     "\n",
     "# Print the number of compounds successfully featurized\n",
     "\n",
-    "print(len(compounds))\n",
-    "print(len(fingerprints))\n",
-    "    \n",
-    "print(compounds[0])\n",
-    "print(fingerprints[0])\n",
-    "print(activities[0])"
+    "print(\"Successfully featurized {0} compounds.\".format(len(compounds)))\n",
+    "\n",
+    "# Show an example of the raw data\n",
+    "print(\"Sample ID: {0}\".format(compound_ids[0]))\n",
+    "print(\"Sample fingerprint vector: \".format(fingerprints[0]))\n",
+    "print(\"Was it bioactive? Assay returned: {0}\".format(activities[0]))"
    ]
   },
   {
@@ -144,24 +168,40 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import r2_score\n",
     "\n",
+    "# Create a train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(fingerprints, activities, test_size=0.33, random_state=42)\n",
     "\n",
     "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf.fit(X_train,y_train)\n",
     "\n",
+    "# We have the 'ground truth' of which of the held-out 33% of the data was really bioactive. But can we predict it?\n",
+    "# If we could, we could predict which compounds might be bioactive without having to actually test them\n",
+    "\n",
     "score = rf.score(X_test,y_test)\n",
     "\n",
-    "print(\"Random forest obtained a score of: {0}\".format(score))"
+    "print(\"Random forest obtained a mean accuracy score of: {0}\".format(score))\n",
+    "\n",
+    "# Analysis: it looks like we can predict reasonably well with this featurization.\n",
+    "# Unfortunately it's not directly comparable to ROC_AUC calculated in MoleculeNet at: https://arxiv.org/pdf/1703.00564.pdf \n",
+    "# MoleculeNet looks at a different metric (roc_auc) and also a different task (multiclass prediction across 128 bioassays simultaneously vs binary classification here)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:capstone-pcba]",
+   "display_name": "Python [conda env:pubchem-sklearn]",
    "language": "python",
-   "name": "conda-env-capstone-pcba-py"
+   "name": "conda-env-pubchem-sklearn-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
