Updated notebook; accuracy of 93% on assay 1030

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "## Results ##\n",
     "\n",
-    "We use the SMILES string, a common representation for a molecule amongst chemists, to begin the featurization process. Because the length of this string varies, it is normalized in the form of a Morgan Fingerprint; these are then used to train a RandomForestClassifier using sklearn. The performance on a held-out test set was 92% \n"
+    "We use the SMILES string, a common representation for a molecule amongst chemists, to begin the featurization process. Because the length of this string varies, it is normalized in the form of a Morgan Fingerprint; these are then used to train a RandomForestClassifier using sklearn. The performance on a held-out test set was approx 93% \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
     "# Cleanup the compound ID column\n",
     "full_df[\"PUBCHEM_CID\"] = full_df[\"PUBCHEM_CID\"].astype(int)\n",
     "\n",
-    "compounds = list()\n",
+    "compound_ids = list()\n",
     "fingerprints = list()\n",
     "activities = list()\n",
     "\n",
@@ -101,7 +101,7 @@
     "        DataStructs.ConvertToNumpyArray(fingerprint, arr)\n",
     "        fingerprint = arr\n",
     "        \n",
-    "        compounds.append(cid)\n",
+    "        compound_ids.append(cid)\n",
     "        fingerprints.append(fingerprint)\n",
     "        activities.append(is_active)\n",
     "    \n",
@@ -110,16 +110,16 @@
     "\n",
     "print(\"Processed all, pickling\")\n",
     "\n",
-    "compounds_and_features = (compounds, fingerprints, activities)\n",
+    "compound_ids_and_features = (compound_ids, fingerprints, activities)\n",
     "\n",
     "# Pickle the data to save time in the future\n",
     "with open('data.pickle', 'wb') as f:\n",
-    "    pickle.dump(compounds_and_features, f, pickle.HIGHEST_PROTOCOL)"
+    "    pickle.dump(compound_ids_and_features, f, pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,9 +127,9 @@
      "output_type": "stream",
      "text": [
       "Successfully featurized 220364 compounds.\n",
-      "6603008\n",
-      "[ 0.  0.  0. ...,  0.  0.  0.]\n",
-      "False\n"
+      "Sample ID: 6603008\n",
+      "Sample fingerprint vector: \n",
+      "Was it bioactive? Assay returned: False\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
     "\n",
     "# Print the number of compounds successfully featurized\n",
     "\n",
-    "print(\"Successfully featurized {0} compounds.\".format(len(compounds)))\n",
+    "print(\"Successfully featurized {0} compounds.\".format(len(compound_ids)))\n",
     "\n",
     "# Show an example of the raw data\n",
     "print(\"Sample ID: {0}\".format(compound_ids[0]))\n",
@@ -162,9 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random forest obtained a mean accuracy score of: 0.9303639938944734\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -172,19 +180,23 @@
     "# Create a train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(fingerprints, activities, test_size=0.33, random_state=42)\n",
     "\n",
-    "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "# Note: This may take 5-10 minutes to run\n",
     "rf.fit(X_train,y_train)\n",
     "\n",
     "# We have the 'ground truth' of which of the held-out 33% of the data was really bioactive. But can we predict it?\n",
-    "# If we could, we could predict which compounds might be bioactive without having to actually test them\n",
+    "# If we could, we could predict which compounds might be bioactive without having to actually test them in a lab\n",
     "\n",
     "score = rf.score(X_test,y_test)\n",
     "\n",
     "print(\"Random forest obtained a mean accuracy score of: {0}\".format(score))\n",
     "\n",
     "# Analysis: it looks like we can predict reasonably well with this featurization.\n",
-    "# Unfortunately it's not directly comparable to ROC_AUC calculated in MoleculeNet at: https://arxiv.org/pdf/1703.00564.pdf \n",
-    "# MoleculeNet looks at a different metric (roc_auc) and also a different task (multiclass prediction across 128 bioassays simultaneously vs binary classification here)"
+    "# TBD: Is there a better scoring function we can use, or is mean accuracy sufficient, as it's a binary classifier?\n",
+    "\n",
+    "# Note: Unfortunately it's not directly comparable to ROC_AUC calculated in MoleculeNet at: https://arxiv.org/pdf/1703.00564.pdf \n",
+    "# This is because MoleculeNet looks at a different metric (roc_auc) and also a different task (multiclass prediction across 128 bioassays simultaneously vs binary classification here)"
    ]
   },
   {
