--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -150,8 +150,7 @@
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
     "    (compound_ids, fingerprints, activities) = pickle.load(f)\n",
     "\n",
-    "# Print the number of compounds successfully featurized\n",
-    "\n",
+    "# Print the number of compounds loaded\n",
     "print(\"Successfully featurized {0} compounds.\".format(len(compound_ids)))\n",
     "\n",
     "# Show an example of the raw data\n",
@@ -162,35 +161,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random forest obtained a mean accuracy score of: 0.9303639938944734\n"
+      "Classifier obtained a mean accuracy score of: 0.9003726571416785\n",
+      "Precision: [ 0.94324277  0.30084484], Recall: [ 0.94966547  0.2748494 ], F-Score: [ 0.94644322  0.28726021], Support: [67409  5312]\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import precision_recall_fscore_support, classification_report\n",
+    "\n",
     "\n",
     "# Create a train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(fingerprints, activities, test_size=0.33, random_state=42)\n",
     "\n",
-    "rf = RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "#classifier = RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "classifier = DecisionTreeClassifier(random_state=42)\n",
     "\n",
     "# Note: This may take 5-10 minutes to run\n",
-    "rf.fit(X_train,y_train)\n",
+    "classifier.fit(X_train,y_train)\n",
     "\n",
     "# We have the 'ground truth' of which of the held-out 33% of the data was really bioactive. But can we predict it?\n",
     "# If we could, we could predict which compounds might be bioactive without having to actually test them in a lab\n",
     "\n",
-    "score = rf.score(X_test,y_test)\n",
+    "score = classifier.score(X_test,y_test)\n",
     "\n",
-    "print(\"Random forest obtained a mean accuracy score of: {0}\".format(score))\n",
+    "print(\"Classifier obtained a mean accuracy score of: {0}\".format(score))\n",
+    "\n",
+    "y_pred = classifier.predict(X_test)\n",
     "\n",
     "# Analysis: it looks like we can predict reasonably well with this featurization.\n",
     "# TBD: Is there a better scoring function we can use, or is mean accuracy sufficient, as it's a binary classifier?\n",
@@ -201,12 +208,142 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.94      0.95      0.95     67409\n",
+      "       True       0.30      0.27      0.29      5312\n",
+      "\n",
+      "avg / total       0.90      0.90      0.90     72721\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_recall_fscore_support, classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(False, 16111), (True, 16111)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's try undersampling the majority class to improve the f1-score for True predictions\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "from collections import Counter\n",
+    "\n",
+    "rus = RandomUnderSampler(random_state=42)\n",
+    "X_resampled, y_resampled = rus.fit_sample(fingerprints, activities)\n",
+    "print(sorted(Counter(y_resampled).items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier obtained a mean accuracy score of: 0.6444423547113034\n",
+      "Precision: [ 0.6437959   0.64505495], Recall: [ 0.63218827  0.65647717], F-Score: [ 0.63793929  0.65071594], Support: [5269 5365]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "\n",
+    "# Create a train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.33, random_state=42)\n",
+    "\n",
+    "classifier = RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "classifier = DecisionTreeClassifier(random_state=42)\n",
+    "\n",
+    "# Note: This may take 5-10 minutes to run\n",
+    "classifier.fit(X_train,y_train)\n",
+    "\n",
+    "# We have the 'ground truth' of which of the held-out 33% of the data was really bioactive. But can we predict it?\n",
+    "# If we could, we could predict which compounds might be bioactive without having to actually test them in a lab\n",
+    "\n",
+    "score = classifier.score(X_test,y_test)\n",
+    "\n",
+    "print(\"Classifier obtained a mean accuracy score of: {0}\".format(score))\n",
+    "\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier obtained a mean accuracy score of: 0.7187323678766222\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.70      0.76      0.73      5269\n",
+      "       True       0.74      0.68      0.71      5365\n",
+      "\n",
+      "avg / total       0.72      0.72      0.72     10634\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's try using a Random forest\n",
+    "\n",
+    "classifier = RandomForestClassifier(n_estimators=100, random_state=42, n_jobs=-1)\n",
+    "\n",
+    "# Note: This may take 5-10 minutes to run\n",
+    "classifier.fit(X_train,y_train)\n",
+    "\n",
+    "# We have the 'ground truth' of which of the held-out 33% of the data was really bioactive. But can we predict it?\n",
+    "# If we could, we could predict which compounds might be bioactive without having to actually test them in a lab\n",
+    "\n",
+    "score = classifier.score(X_test,y_test)\n",
+    "\n",
+    "print(\"Classifier obtained a mean accuracy score of: {0}\".format(score))\n",
+    "\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
