Adding larger network

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -369,14 +369,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using Theano backend.\n"
+      "[1 1 1 0 0]\n",
+      "Epoch 1/10\n",
+      "21588/21588 [==============================] - 18s - loss: 0.6304 - binary_accuracy: 0.6485    \n",
+      "Epoch 2/10\n",
+      "21588/21588 [==============================] - 17s - loss: 0.5625 - binary_accuracy: 0.7122    \n",
+      "Epoch 3/10\n",
+      "21588/21588 [==============================] - 17s - loss: 0.5138 - binary_accuracy: 0.7457    \n",
+      "Epoch 4/10\n",
+      "21588/21588 [==============================] - 19s - loss: 0.4694 - binary_accuracy: 0.7747    \n",
+      "Epoch 5/10\n",
+      "21588/21588 [==============================] - 21s - loss: 0.4286 - binary_accuracy: 0.8017    \n",
+      "Epoch 6/10\n",
+      "21588/21588 [==============================] - 21s - loss: 0.4006 - binary_accuracy: 0.8183    \n",
+      "Epoch 7/10\n",
+      "21588/21588 [==============================] - 21s - loss: 0.3706 - binary_accuracy: 0.8336    \n",
+      "Epoch 8/10\n",
+      "21588/21588 [==============================] - 21s - loss: 0.3446 - binary_accuracy: 0.8483    \n",
+      "Epoch 9/10\n",
+      "21588/21588 [==============================] - 22s - loss: 0.3199 - binary_accuracy: 0.8619    \n",
+      "Epoch 10/10\n",
+      "21588/21588 [==============================] - 22s - loss: 0.3027 - binary_accuracy: 0.8706    \n",
+      " 7488/10634 [====================>.........] - ETA: 0sLoss on test set is: %[0.94709595465023355, 0.66682339666345769].2f\n"
      ]
     }
    ],
@@ -386,20 +407,69 @@
     "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
+    "from keras import metrics\n",
     "\n",
     "model = Sequential()\n",
     "model.add(Dense(12, input_dim=2048, activation='relu'))\n",
     "model.add(Dense(8, activation='relu'))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
-    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
     "\n",
     "y_train_binary = y_train.astype(int)\n",
+    "\n",
+    "print(y_train_binary[0:5])\n",
+    "\n",
     "y_test_binary = y_test.astype(int)\n",
     "\n",
-    "model.fit(X_train, y_train_binary, epochs=150, batch_size=10)\n",
+    "model.fit(X_train, y_train_binary, epochs=10, batch_size=1)\n",
     "\n",
-    "scores = model.evaluate(X_test, y_test_binary)\n",
-    "print(\"\\n%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))"
+    "score = model.evaluate(X_test, y_test_binary)\n",
+    "\n",
+    "print(\"\\n Loss on test set is: %.2f{0}\".format(score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False False  True False]\n",
+      "[[ 0.01426301]\n",
+      " [ 0.33204243]\n",
+      " [ 0.53722727]\n",
+      " [ 0.94091994]\n",
+      " [ 0.33492619]]\n",
+      "[False, False, True, True, False]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.66      0.68      0.67      5269\n",
+      "       True       0.68      0.65      0.66      5365\n",
+      "\n",
+      "avg / total       0.67      0.67      0.67     10634\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict_on_batch(X_test)\n",
+    "\n",
+    "print(y_test[0:5])\n",
+    "print(y_pred[0:5])\n",
+    "\n",
+    "y_pred_binarized = list()\n",
+    "\n",
+    "for pred in y_pred:\n",
+    "    if pred >= .5 :\n",
+    "        y_pred_binarized.append(True)\n",
+    "    else :\n",
+    "        y_pred_binarized.append(False)\n",
+    "\n",
+    "print(y_pred_binarized[0:5])\n",
+    "print(classification_report(y_test, y_pred_binarized))\n"
    ]
   },
   {
@@ -411,38 +481,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  2.03750189e-03]\n",
-      " [  1.14329438e-17]\n",
-      " [  9.91880357e-01]\n",
-      " [  1.11250974e-01]\n",
-      " [  1.94710310e-32]]\n",
-      "[0 0 0 0 0]\n",
-      "[False, False, False, False, False]\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "      False       0.50      1.00      0.66      5269\n",
-      "       True       0.00      0.00      0.00      5365\n",
-      "\n",
-      "avg / total       0.25      0.50      0.33     10634\n",
-      "\n"
+      "[1 1 1 0 0]\n",
+      "Epoch 1/10\n",
+      " 1664/21588 [=>............................] - ETA: 2461s - loss: 0.7104 - binary_accuracy: 0.5475"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-02de9f14b406>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0my_test_binary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_binary\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test_binary\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/keras/models.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, **kwargs)\u001b[0m\n\u001b[1;32m    861\u001b[0m                               \u001b[0mclass_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m                               \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 863\u001b[0;31m                               initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m    864\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    865\u001b[0m     def evaluate(self, x, y, batch_size=32, verbose=1,\n",
+      "\u001b[0;32m/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, **kwargs)\u001b[0m\n\u001b[1;32m   1428\u001b[0m                               \u001b[0mval_f\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mval_f\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_ins\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mval_ins\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1429\u001b[0m                               \u001b[0mcallback_metrics\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcallback_metrics\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1430\u001b[0;31m                               initial_epoch=initial_epoch)\n\u001b[0m\u001b[1;32m   1431\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1432\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/keras/engine/training.py\u001b[0m in \u001b[0;36m_fit_loop\u001b[0;34m(self, f, ins, out_labels, batch_size, epochs, verbose, callbacks, val_f, val_ins, shuffle, callback_metrics, initial_epoch)\u001b[0m\n\u001b[1;32m   1077\u001b[0m                 \u001b[0mbatch_logs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'size'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1078\u001b[0m                 \u001b[0mcallbacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_batch_begin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_logs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1079\u001b[0;31m                 \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mins_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1080\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1081\u001b[0m                     \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/keras/backend/theano_backend.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   1195\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1196\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1197\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/theano/compile/function_module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    882\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    883\u001b[0m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 884\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput_subset\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    885\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_subset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput_subset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    886\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "y_pred = model.predict(X_test)\n",
-    "#y_pred_classified = np.argmax(y_pred, axis=1)\n",
+    "# What about a larger network size?\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras import metrics\n",
     "\n",
-    "print(y_pred[0:5])\n",
+    "model = Sequential()\n",
+    "model.add(Dense(2048, input_dim=2048, activation='relu'))\n",
+    "model.add(Dense(1024, activation='relu'))\n",
+    "model.add(Dense(512, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
     "\n",
-    "y_pred_classified = np.argmax(y_pred, axis=1)\n",
+    "y_train_binary = y_train.astype(int)\n",
     "\n",
-    "print(y_pred_classified[0:5])\n",
+    "print(y_train_binary[0:5])\n",
     "\n",
-    "y_pred_binarized = [x > .5 for x in y_pred_classified]\n",
+    "y_test_binary = y_test.astype(int)\n",
     "\n",
-    "print(y_pred_binarized[0:5])\n",
+    "model.fit(X_train, y_train_binary, epochs=10, batch_size=1)\n",
     "\n",
-    "print(classification_report(y_test, y_pred_binarized))\n"
+    "score = model.evaluate(X_test, y_test_binary)\n",
+    "\n",
+    "print(\"\\n Loss on test set is: %.2f{0}\".format(score))"
    ]
   },
   {
