adding code to save NN

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -622,14 +622,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# The larger NN doesn't seem to have helped much..."
+    "# The larger NN doesn't seem to have helped much...let's save it for future experimentation\n",
+    "model.save(\"pcba_1030_large_nn.h5\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
