Updating project report

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -15,6 +15,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exploratory data analysis and visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
@@ -164,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +191,7 @@
     }
    ],
    "source": [
-    "# Duplicate imports in case starting from this cell\n",
+    "# Let's try again. We duplicate imports in case starting from this cell\n",
     "\n",
     "import pickle\n",
     "import numpy as np\n",
@@ -190,6 +201,7 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "smiles_list = None\n",
     "compound_ids = None\n",
     "fingerprints = None\n",
     "activities = None\n",
@@ -201,7 +213,7 @@
     "    (compound_ids, smiles_list, fingerprints, activities) = pickle.load(f)\n",
     "\n",
     "# Print the number of compounds loaded\n",
-    "print(\"Successfully featurized {0} compounds.\".format(len(compound_ids)))\n",
+    "print(\"Successfully loaded {0} compounds.\".format(len(compound_ids)))\n",
     "\n",
     "# Show an example of the raw data\n",
     "print(\"Sample ID: {0}\".format(compound_ids[0]))\n",
@@ -223,7 +235,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -371,56 +385,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 0 0]\n",
-      "Epoch 1/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.6304 - binary_accuracy: 0.6431    \n",
-      "Epoch 2/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.5614 - binary_accuracy: 0.7099    \n",
-      "Epoch 3/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.5109 - binary_accuracy: 0.7488    \n",
-      "Epoch 4/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.4687 - binary_accuracy: 0.7775    \n",
-      "Epoch 5/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.4273 - binary_accuracy: 0.8058    \n",
-      "Epoch 6/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.3901 - binary_accuracy: 0.8261    \n",
-      "Epoch 7/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.3583 - binary_accuracy: 0.8442    \n",
-      "Epoch 8/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.3295 - binary_accuracy: 0.8600    \n",
-      "Epoch 9/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.3069 - binary_accuracy: 0.8708    \n",
-      "Epoch 10/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.2851 - binary_accuracy: 0.8821    \n",
-      "Epoch 11/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.2633 - binary_accuracy: 0.8901    \n",
-      "Epoch 12/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.2486 - binary_accuracy: 0.8999    \n",
-      "Epoch 13/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.2294 - binary_accuracy: 0.9073    \n",
-      "Epoch 14/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.2136 - binary_accuracy: 0.9132    \n",
-      "Epoch 15/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.2021 - binary_accuracy: 0.9204    \n",
-      "Epoch 16/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.1918 - binary_accuracy: 0.9230    \n",
-      "Epoch 17/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.1820 - binary_accuracy: 0.9266    \n",
-      "Epoch 18/20\n",
-      "21588/21588 [==============================] - 40s - loss: 0.1733 - binary_accuracy: 0.9293    \n",
-      "Epoch 19/20\n",
-      "21588/21588 [==============================] - 41s - loss: 0.1669 - binary_accuracy: 0.9320    \n",
-      "Epoch 20/20\n",
-      "21588/21588 [==============================] - 41s - loss: 0.1572 - binary_accuracy: 0.9367    \n",
-      "10144/10634 [===========================>..] - ETA: 0s\n",
-      " Loss on test set is: %.2f[1.8505845538247498, 0.64848598838412985]\n"
+      "Epoch 1/5\n",
+      "21588/21588 [==============================] - 41s - loss: 0.6330 - binary_accuracy: 0.6430    \n",
+      "Epoch 2/5\n",
+      "21588/21588 [==============================] - 42s - loss: 0.5707 - binary_accuracy: 0.7063    \n",
+      "Epoch 3/5\n",
+      "21588/21588 [==============================] - 41s - loss: 0.5290 - binary_accuracy: 0.7377    \n",
+      "Epoch 4/5\n",
+      "21588/21588 [==============================] - 42s - loss: 0.4898 - binary_accuracy: 0.7635    \n",
+      "Epoch 5/5\n",
+      "21588/21588 [==============================] - 41s - loss: 0.4512 - binary_accuracy: 0.7888    \n",
+      " 9408/10634 [=========================>....] - ETA: 0s\n",
+      " Loss on test set is: %.2f[0.66439540711968426, 0.68779386870054371]\n"
      ]
     }
    ],
@@ -438,115 +421,79 @@
     "model.add(Dense(1, activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
     "\n",
-    "y_train_binary = y_train.astype(int)\n",
+    "model.fit(X_train, y_train, epochs=5, batch_size=1)\n",
     "\n",
-    "print(y_train_binary[0:5])\n",
+    "score = model.evaluate(X_test, y_test)\n",
     "\n",
-    "y_test_binary = y_test.astype(int)\n",
-    "\n",
-    "model.fit(X_train, y_train_binary, epochs=20, batch_size=1)\n",
-    "\n",
-    "score = model.evaluate(X_test, y_test_binary)\n",
-    "\n",
-    "print(\"\\n Loss on test set is: %.2f{0}\".format(score))"
+    "print(\"\\n Loss on test set is: {0}\".format(score))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[ 0.32664165]\n",
+      "[ 0.86099917]\n",
       "[ True False False  True False]\n",
-      "[[ 0.97291088]\n",
-      " [ 0.25812885]\n",
-      " [ 0.23556663]\n",
-      " [ 0.78397679]\n",
-      " [ 0.57503569]]\n",
-      "[True, False, False, True, True]\n",
+      "[[ 0.32664165]\n",
+      " [ 0.86099917]\n",
+      " [ 0.34932867]\n",
+      " [ 0.53439289]\n",
+      " [ 0.20081647]]\n",
+      "[ 0.32664165]\n",
+      "[False, True, False, True, False]\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "      False       0.64      0.66      0.65      5269\n",
-      "       True       0.65      0.64      0.65      5365\n",
+      "      False       0.69      0.68      0.68      5269\n",
+      "       True       0.69      0.69      0.69      5365\n",
       "\n",
-      "avg / total       0.65      0.65      0.65     10634\n",
+      "avg / total       0.69      0.69      0.69     10634\n",
       "\n"
      ]
     }
    ],
    "source": [
     "y_pred = model.predict_on_batch(X_test)\n",
-    "\n",
-    "print(y_test[0:5])\n",
-    "print(y_pred[0:5])\n",
-    "\n",
-    "y_pred_binarized = list()\n",
-    "\n",
-    "for pred in y_pred:\n",
-    "    if pred >= .5 :\n",
-    "        y_pred_binarized.append(True)\n",
-    "    else :\n",
-    "        y_pred_binarized.append(False)\n",
-    "\n",
-    "print(y_pred_binarized[0:5])\n",
+    "y_pred_binarized = y_pred[0:] > .5\n",
     "print(classification_report(y_test, y_pred_binarized))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 0 0]\n",
-      "Epoch 1/20\n",
-      "21588/21588 [==============================] - 154s - loss: 0.6503 - binary_accuracy: 0.6295   \n",
-      "Epoch 2/20\n",
-      "21588/21588 [==============================] - 154s - loss: 0.5529 - binary_accuracy: 0.7275   \n",
-      "Epoch 3/20\n",
-      "21588/21588 [==============================] - 154s - loss: 0.4236 - binary_accuracy: 0.8148   \n",
-      "Epoch 4/20\n",
-      "21588/21588 [==============================] - 154s - loss: 0.2686 - binary_accuracy: 0.8974   \n",
-      "Epoch 5/20\n",
-      "21588/21588 [==============================] - 154s - loss: 0.1603 - binary_accuracy: 0.9467   \n",
-      "Epoch 6/20\n",
-      "21588/21588 [==============================] - 154s - loss: 0.1031 - binary_accuracy: 0.9710   \n",
-      "Epoch 7/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0714 - binary_accuracy: 0.9810   \n",
-      "Epoch 8/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0557 - binary_accuracy: 0.9865   \n",
-      "Epoch 9/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0487 - binary_accuracy: 0.9892   \n",
-      "Epoch 10/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0440 - binary_accuracy: 0.9918   \n",
-      "Epoch 11/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0367 - binary_accuracy: 0.9923   \n",
-      "Epoch 12/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0387 - binary_accuracy: 0.9940   \n",
-      "Epoch 13/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0488 - binary_accuracy: 0.9914   \n",
-      "Epoch 14/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0369 - binary_accuracy: 0.9940   \n",
-      "Epoch 15/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0372 - binary_accuracy: 0.9959   \n",
-      "Epoch 16/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0457 - binary_accuracy: 0.9943   \n",
-      "Epoch 17/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0675 - binary_accuracy: 0.9927   \n",
-      "Epoch 18/20\n",
-      "21588/21588 [==============================] - 154s - loss: 0.0503 - binary_accuracy: 0.9937   \n",
-      "Epoch 19/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0536 - binary_accuracy: 0.9936   \n",
-      "Epoch 20/20\n",
-      "21588/21588 [==============================] - 155s - loss: 0.0460 - binary_accuracy: 0.9943   \n",
-      " 9952/10634 [===========================>..] - ETA: 0s\n",
-      " Loss on test set is: %.2f[3.0211564344370614, 0.69343614821508459]\n"
+      "Epoch 1/10\n",
+      "21588/21588 [==============================] - 157s - loss: 0.6547 - binary_accuracy: 0.6300   \n",
+      "Epoch 2/10\n",
+      "21588/21588 [==============================] - 157s - loss: 0.5607 - binary_accuracy: 0.7244   \n",
+      "Epoch 3/10\n",
+      "21588/21588 [==============================] - 156s - loss: 0.4330 - binary_accuracy: 0.8107   \n",
+      "Epoch 4/10\n",
+      "21588/21588 [==============================] - 246s - loss: 0.2914 - binary_accuracy: 0.8878   \n",
+      "Epoch 5/10\n",
+      "21588/21588 [==============================] - 154s - loss: 0.1691 - binary_accuracy: 0.9432   \n",
+      "Epoch 6/10\n",
+      "21588/21588 [==============================] - 154s - loss: 0.1083 - binary_accuracy: 0.9674   \n",
+      "Epoch 7/10\n",
+      "21588/21588 [==============================] - 154s - loss: 0.0837 - binary_accuracy: 0.9783   \n",
+      "Epoch 8/10\n",
+      "21588/21588 [==============================] - 156s - loss: 0.0889 - binary_accuracy: 0.9824   \n",
+      "Epoch 9/10\n",
+      "21588/21588 [==============================] - 154s - loss: 0.0802 - binary_accuracy: 0.9859   \n",
+      "Epoch 10/10\n",
+      "21588/21588 [==============================] - 154s - loss: 0.0616 - binary_accuracy: 0.9894   \n",
+      " 9056/10634 [========================>.....] - ETA: 0s\n",
+      " Loss on test set is: [2.0330749523915448, 0.68751175476012871]\n"
      ]
     }
    ],
@@ -563,73 +510,58 @@
     "model.add(Dense(1, activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
     "\n",
-    "y_train_binary = y_train.astype(int)\n",
-    "\n",
-    "print(y_train_binary[0:5])\n",
-    "\n",
-    "y_test_binary = y_test.astype(int)\n",
-    "\n",
     "model.fit(X_train, y_train_binary, epochs=10, batch_size=1)\n",
     "\n",
     "score = model.evaluate(X_test, y_test_binary)\n",
     "\n",
-    "print(\"\\n Loss on test set is: %.2f{0}\".format(score))"
+    "print(\"\\n Loss on test set is: {0}\".format(score))\n",
+    "\n",
+    "# let's save it for future experimentation\n",
+    "model.save(\"pcba_1030_large_nn.h5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ True False False  True False]\n",
-      "[[  1.88671425e-01]\n",
-      " [  7.83160649e-05]\n",
-      " [  3.67873199e-08]\n",
-      " [  5.14224768e-02]\n",
-      " [  5.37856657e-04]]\n",
-      "[False, False, False, False, False]\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "      False       0.67      0.75      0.71      5269\n",
-      "       True       0.72      0.64      0.68      5365\n",
+      "      False       0.73      0.59      0.65      5269\n",
+      "       True       0.66      0.79      0.72      5365\n",
       "\n",
-      "avg / total       0.70      0.69      0.69     10634\n",
+      "avg / total       0.69      0.69      0.68     10634\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "y_pred = model.predict_on_batch(X_test)\n",
-    "\n",
-    "print(y_test[0:5])\n",
-    "print(y_pred[0:5])\n",
-    "\n",
-    "y_pred_binarized = list()\n",
-    "\n",
-    "for pred in y_pred:\n",
-    "    if pred >= .5 :\n",
-    "        y_pred_binarized.append(True)\n",
-    "    else :\n",
-    "        y_pred_binarized.append(False)\n",
-    "\n",
-    "print(y_pred_binarized[0:5])\n",
+    "from keras.models import load_model\n",
+    "model_large = load_model(\"pcba_1030_large_nn.h5\")\n",
+    "y_pred = model_large.predict_on_batch(X_test)\n",
+    "y_pred_binarized = y_pred[0:] > .5\n",
     "print(classification_report(y_test, y_pred_binarized))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# The larger NN doesn't seem to have helped much...let's save it for future experimentation\n",
-    "model.save(\"pcba_1030_large_nn.h5\")"
+    "# Does oversampling help much? Let's see\n",
+    "\n",
+    "from imblearn.over_sampling import SMOTE, ADASYN\n",
+    "X_resampled, y_resampled = SMOTE().fit_sample(fingerprints, activities)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.33, random_state=global_random_state)\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "print(sorted(Counter(y_resampled).items()))\n"
    ]
   },
   {
