--- a/pubchem_exploratory_analysis.ipynb
+++ b/pubchem_exploratory_analysis.ipynb
@@ -31,9 +31,10 @@
     }
    ],
    "source": [
+    "# Load bioassay results\n",
     "ba_df = pd.read_csv(\"AID_1030_datatable_all.csv\")\n",
     "\n",
-    "# Load compound info\n",
+    "# Load compound SMILES info\n",
     "cs_df = pd.read_csv(\"AID_1030_compound_smiles.csv\",sep='\\t',header=0)\n",
     "\n",
     "# Merge the two\n",
@@ -87,6 +88,92 @@
     "inactive_count = c[\"Inactive\"]\n",
     "inconclusive_count = c[\"Inconclusive\"]\n",
     "print(\"Active: {}, Inactive: {}, Inconclusive: {}\".format(active_count,inactive_count,inconclusive_count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count                                                220365\n",
+      "unique                                               216887\n",
+      "top       COC1=C(C=C(C=C1)Cl)C(=O)NCCC2=CC=C(C=C2)S(=O)(...\n",
+      "freq                                                      8\n",
+      "Name: Smiles, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now, let's look at the column we'll be using to derive our features. This is the \"smiles\" column\n",
+    "smiles = full_df[\"Smiles\"]\n",
+    "print(smiles.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    220365.000000\n",
+       "mean         48.853248\n",
+       "std          13.989668\n",
+       "min           2.000000\n",
+       "25%          40.000000\n",
+       "50%          48.000000\n",
+       "75%          56.000000\n",
+       "max         594.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smiles_lengths = pd.Series([len(s) for s in smiles])\n",
+    "smiles_lengths.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count                          16112\n",
+      "unique                         16025\n",
+      "top       CCN(CC)C(=S)SSC(=S)N(CC)CC\n",
+      "freq                               5\n",
+      "Name: Smiles, dtype: object\n",
+      "count    16112.000000\n",
+      "mean        50.287053\n",
+      "std         12.586626\n",
+      "min          5.000000\n",
+      "25%         42.000000\n",
+      "50%         50.000000\n",
+      "75%         58.000000\n",
+      "max        327.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "active_rows = full_df.loc[full_df[\"PUBCHEM_ACTIVITY_OUTCOME\"] == 'Active']\n",
+    "active_smiles = active_rows[\"Smiles\"]\n",
+    "print(active_smiles.describe())\n",
+    "active_smiles_lengths = pd.Series([len(s) for s in active_smiles])\n",
+    "print(active_smiles_lengths.describe())"
    ]
   },
   {
